--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="author" content="Nishant Kapadiya">
+    <meta name=" description" content="My personal portfolio." />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
+    <!-- Logos -->
+    <link rel="shortcut icon" href="%PUBLIC_URL%/assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="%PUBLIC_URL%/assets/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/favicon.ico" />
+
+    <!-- Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik%3A300%2C300i%2C400%2C400i%2C500%2C500i%2C600%2C600i%2C700%2C700i%2C800%2C800i%2C900%2C900i%7CSorts+Mill+Goudy&#038;display=swap" type="text/css" media="all" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CRoboto+Slab%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&#038; display=auto"
+        type="text/css" media="all" />
+    <!-- CSS STYLES -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/vendors/bootstrap.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/fonts/font-awesome/css/font-awesome.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/vendors/magnific-popup.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/vendors/splitting.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/vendors/swiper.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/vendors/animate.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/main.css" type="text/css" media="all" />
+
+
+    <!-- manifest -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>Nishant Kapadiya - Resume</title>
+</head>
+
+<body class="home page light-skin">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <!-- cursor -->
+    <div class="cursor"></div>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+    <script src="%PUBLIC_URL%/assets/js/jquery.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/jquery.validate.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/bootstrap.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/swiper.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/splitting.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/jarallax.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/magnific-popup.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/imagesloaded.pkgd.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/isotope.pkgd.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/jquery.scrolla.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/skrollr.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/jquery.cookie.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/common.js"></script>
+</body>
+
 </html>
